[package]
name = "realtime-api"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio-util = "0.7.18"
axum = { version = "0.8.8", features = ["multipart", "macros", "ws"] }
axum-signal = "0.1.3"
postcard = { version = "1", features = ["use-std"] }
dashmap = "6.1.0"
futures = "0.3.32"
socket2 = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.149"
rmp-serde = "1.3.1"
signal-hook = "0.4.3"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4", "serde", "fast-rng"] }
